--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="https://huggingface.co/spaces/Manishikha/DietDemo">KhaanPaan</a></li>
                 <li><a href="https://huggingface.co/spaces/Shivya0410/MaternalRiskPredictor">HealthCheck</a></li>
                 <li><a href="map.html">SwasthyaKendra</a></li>
-                <li><a href="Blogs/Blogs/blogs.html">SwasthaMann</a></li>
+                <li><a href="blogs.html">SwasthaMann</a></li>
                 </ul>
         </nav>
         <button class="Alert">Alert</button>
