--- a/blogs.html
+++ b/blogs.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Chivo:300,700|Playfair+Display:700i" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="Blogs/blogs.css">
+    <link rel="stylesheet" href="Blogs/Blogs/blogs.css">
     <link rel="stylesheet" href="login.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <style>
@@ -42,7 +42,7 @@
         <div class="container">
             <!-- Card 1 -->
             <div class="card">
-                <img src="Blogs/B1.jpeg" alt=" ">
+                <img src="Blogs/Blogs/B1.jpeg" alt=" ">
                 <div class="card-content">
                     <h3 class="card-title">Blog 1 : Addressing 5 Physical Changes After Childbirth</h3>
                     <p class="card-text">Motherhood brings emotional and physical changes, including sore breasts, vaginal discomfort, bladder issues, hair loss, skin changes, and body tone struggles. While many changes reverse over time, some may persist, making informed care and self-compassion crucial.<br></p>
@@ -55,7 +55,7 @@
 
             <!-- Card 2 -->
             <div class="card">
-                <img src="Blogs/B2.jpeg" alt=" ">
+                <img src="Blogs/Blogs/B2.jpeg" alt=" ">
                 <div class="card-content">
                     <h3 class="card-title">Blog 2 : Upper Stomach Pain During Pregnancy 2nd Trimester</h3>
                     <p class="card-text">Upper abdominal pain during pregnancy is common due to the growing fetus, hormonal changes, and pressure on abdominal organs. While normal discomfort usually resolves itself, severe pain from issues like acid reflux may need medical attention.<br></p>
@@ -68,7 +68,7 @@
 
             <!-- Card 3 -->
             <div class="card">
-                <img src="Blogs/B3.jpeg" alt=" ">
+                <img src="Blogs/Blogs/B3.jpeg" alt=" ">
                 <div class="card-content">
                     <h3 class="card-title">Blog 3 : Why Regular Check-Up is Necessary During Pregnancy</h3>
                     <p class="card-text">Regular prenatal check-ups are essential for monitoring the health of both the mother and baby, identifying potential risks early, and ensuring a smooth pregnancy. These visits offer reassurance, help manage any complications, and support maternal mental health.<br></p>
@@ -82,7 +82,7 @@
 
             <!-- Card 4 -->
             <div class="card">
-                <img src="Blogs/B4.jpeg" alt=" ">
+                <img src="Blogs/Blogs/B4.jpeg" alt=" ">
                 <div class="card-content">
                     <h3 class="card-title">Blog 4 : How to Practice Self-Care During Each Trimester of Pregnancy</h3>
                     <p class="card-text">Practising self-care during pregnancy is essential for the physical and mental health of both mother and baby. Prioritize balanced nutrition, hydration, exercise, sleep, mindfulness, body care, and emotional well-being to ensure a healthy and positive pregnancy experience.<br></p>
@@ -95,7 +95,7 @@
 
             <!-- Card 5 -->
             <div class="card">
-                <img src="Blogs/B5.jpeg" alt=" ">
+                <img src="Blogs/Blogs/B5.jpeg" alt=" ">
                 <div class="card-content">
                     <h3 class="card-title">Blog 5 : Child Support Tips for Parents</h3>
                     <p class="card-text">Both custodial and noncustodial parents must responsibly manage child support to ensure the child's well-being. Custodial parents should budget support funds wisely and not misuse them, while noncustodial parents must pay on time and stay involved in their child's life, regardless of visitation issues.<br></p>
@@ -108,7 +108,7 @@
 
             <!-- Card 6 -->
             <div class="card">
-                <img src="Blogs/B6.jpeg" alt="">
+                <img src="Blogs/Blogs/B6.jpeg" alt="">
                 <div class="card-content">
                     <h3 class="card-title">Blog 6 : Breastfeeding Diet Basics</h3>
                     <p class="card-text">After pregnancy, new mothers need to maintain a balanced diet to ensure their breastmilk is nutritious and supports their baby's growth. This includes consuming nutrient-rich foods, safe fish, essential micronutrients, and moderate caffeine to meet increased caloric and protein needs for optimal maternal health and energy.<br></p>
@@ -121,7 +121,7 @@
 
             <!-- Card 7 -->
             <div class="card">
-                <img src="Blogs/B7.jpeg" alt="">
+                <img src="Blogs/Blogs/B7.jpeg" alt="">
                 <div class="card-content">
                     <h3 class="card-title">Blog 7 : Prepare for the Unexpected</h3>
                     <p class="card-text">Preparing for pregnancy, whether planned or not, involves adopting a healthy lifestyle focusing on diet, physical activity, and safe sex to support maternal and baby health. This proactive approach can improve fertility and pregnancy outcomes, emphasizing balanced nutrition, regular exercise, and STD prevention.<br></p>
@@ -134,7 +134,7 @@
 
             <!-- Card 8 -->
             <div class="card">
-                <img src="Blogs/B8.jpeg" alt="">
+                <img src="Blogs/Blogs/B8.jpeg" alt="">
                 <div class="card-content">
                     <h3 class="card-title">Blog 8 : How to Treat Edema in Pregnancy?</h3>
                     <p class="card-text">Edema, or swelling of the feet and ankles, is common during pregnancy due to fluid retention, hormonal changes, and increased blood flow. While it’s often normal, sudden or severe swelling, especially with other symptoms, may indicate serious complications like pre-eclampsia, requiring immediate medical attention.<br></p>
