--- a/blogs.html
+++ b/blogs.html
@@ -20,11 +20,11 @@
         <div class="logo">PregaCare</div>
         <nav>
             <ul>
-                <li><a href="#home" class="active">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="https://huggingface.co/spaces/Manishikha/VaccineDemo">Vaccination</a></li>
                 <li><a href="https://huggingface.co/spaces/Manishikha/DietDemo">KhaanPaan</a></li>
-                <li><a href="#">HealthCheck</a></li>
+                <li><a href="https://huggingface.co/spaces/Shivya0410/MaternalRiskPredictor">HealthCheck</a></li>
                 <li><a href="map.html">SwasthyaKendra</a></li>
                 <li><a href="blogs.html">SwasthaMann</a></li>
                 </ul>
