--- a/blogs.html
+++ b/blogs.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <style>
         body {
-            background-image: url(Blogs/bg.png);
+            background-image: url(bg.png);
         }
     </style>
 </head>
