adding vaccination calendar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="#home" class="active">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="https://huggingface.co/spaces/Manishikha/VaccineDemo">Vaccination</a></li>
+                <li><a href="vaccination.html">Vaccination</a></li>
                 <li><a href="https://huggingface.co/spaces/Manishikha/DietDemo">KhaanPaan</a></li>
                 <li><a href="https://huggingface.co/spaces/Shivya0410/MaternalRiskPredictor">HealthCheck</a></li>
                 <li><a href="map.html">SwasthyaKendra</a></li>
