--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="vaccination.html">Vaccination</a></li>
                 <li><a href="https://huggingface.co/spaces/Manishikha/DietDemo">KhaanPaan</a></li>
-                <li><a href="https://huggingface.co/spaces/Shivya0410/MaternalRiskPredictor">HealthCheck</a></li>
+                <li><a href="https://testschedule-cknfcp4xl3ttbvjwzdo7ab.streamlit.app/#pregnancy-blood-test-recommender-with-schedule-generator">HealthCheck</a></li>
                 <li><a href="map.html">SwasthyaKendra</a></li>
                 <li><a href="blogs.html">SwasthaMann</a></li>
                 </ul>
